fixed alignment

--- a/css/app.css
+++ b/css/app.css
@@ -18,6 +18,7 @@ header {
     margin: 0 0 30px 0;
     width: 100%;
     background-color: #4267b2;
+    padding-left: 20%;
 }
 
 #fbIcon {
